# robotics-gpt

notebooks/: openai_key.txt  pyproject.toml
notebooks/1-PickAndPlace/: PickAndPlace.ipynb  robot_implementation.py  robot_interface.py
notebooks/2-StepwiseControl/: StepwiseControl.ipynb  robot_implementation.py  robot_interface.py
notebooks/3-GenerateRobotInterface/: GenerateRobotInterface.ipynb
notebooks/4-AzureOpenAI/: PickAndPlace.ipynb  robot_implementation.py  robot_interface.py  test.py
pick_and_place/PickAndPlaceProject/Assets/: msgbrowser_settings.asset
pick_and_place/PickAndPlaceProject/Assets/Materials/: BlackMaterial.mat  NonsymmetricCubeTexture.mat  OrangeMaterial.mat  RedMaterial.mat  Target.mat
pick_and_place/PickAndPlaceProject/Assets/Resources/: ROSConnectionPrefab.prefab
pick_and_place/PickAndPlaceProject/Assets/Scenes/: CodexScene.unity  MycobotScene.unity  Part1DoneScene.unity  TM5Scene.unity  TutorialScene.unity
pick_and_place/PickAndPlaceProject/Assets/Scripts/: CustomTrajectoryPlanner.cs  MycobotFollower.cs  MycobotSourceDestinationPublisher.cs  MycobotTrajectoryPlanner.cs
pick_and_place/PickAndPlaceProject/Assets/URDF/mycobot_unity/: gripper_ag.dae  mycobot_unity_urdf.urdf  mycobot_urdf.urdf
pick_and_place/PickAndPlaceProject/Assets/URDF/niryo_one/: niryo_one.urdf
pick_and_place/ROS/src/mycobot_communication/srv/: MoveToPoseService.srv  MoverService.srv
pick_and_place/ROS/src/niryo_moveit/scripts/: mover.py
pick_and_place/ROS/src/unity_robotics_demo_msgs/: CMakeLists.txt
pick_and_place/docker/: Dockerfile
(+10 files in other folders)
