[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Eddie Lin <a-eddielin@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.23.1"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
